extends Control



func _on_bt_retour_pressed() -> void:
	get_tree().change_scene_to_file("res://pages/menu_principal/NotionsImportantes/NotionsImportantes.tscn");



func _on_bt_present_indicatif_pressed() -> void:
	get_tree().change_scene_to_file("res://pages/menu_principal/NotionsImportantes/Conjugaison/Indicatif/Present.tscn");


func _on_bt_passe_compose_pressed() -> void:
	get_tree().change_scene_to_file("res://pages/menu_principal/NotionsImportantes/Conjugaison/Indicatif/PasseCompose.tscn");


func _on_bt_imparfait_pressed() -> void:
	get_tree().change_scene_to_file("res://pages/menu_principal/NotionsImportantes/Conjugaison/Indicatif/Imparfait.tscn");


func _on_bt_plusqueparfait_pressed() -> void:
	get_tree().change_scene_to_file("res://pages/menu_principal/NotionsImportantes/Conjugaison/Indicatif/PlusQueParfait.tscn");


func _on_bt_passe_simple_pressed() -> void:
	get_tree().change_scene_to_file("res://pages/menu_principal/NotionsImportantes/Conjugaison/Indicatif/PasseSimple.tscn");


func _on_bt_futur_simple_pressed() -> void:
	get_tree().change_scene_to_file("res://pages/menu_principal/NotionsImportantes/Conjugaison/Indicatif/FuturSimple.tscn");


func _on_bt_futur_anterieur_pressed() -> void:
	get_tree().change_scene_to_file("res://pages/menu_principal/NotionsImportantes/Conjugaison/Indicatif/FuturAnterieur.tscn");


func _on_bt_conditionnel_present_pressed() -> void:
	get_tree().change_scene_to_file("res://pages/menu_principal/NotionsImportantes/Conjugaison/Indicatif/ConditionnelPresent.tscn");


func _on_bt_conditionnel_passe_pressed() -> void:
	get_tree().change_scene_to_file("res://pages/menu_principal/NotionsImportantes/Conjugaison/Indicatif/ConditionnelPasse.tscn");


func _on_bt_present_subjonctif_pressed() -> void:
	get_tree().change_scene_to_file("res://pages/menu_principal/NotionsImportantes/Conjugaison/Subjonctif/Present.tscn");


func _on_bt_passe_subonctif_pressed() -> void:
	get_tree().change_scene_to_file("res://pages/menu_principal/NotionsImportantes/Conjugaison/Subjonctif/Passe.tscn");


func _on_bt_imparfait_subjonctif_pressed() -> void:
	print("Error")
	get_tree().change_scene_to_file("res://pages/menu_principal/NotionsImportantes/Conjugaison/Subjonctif/Imparfait.tscn");


func _on_bt_plusqueparfait_subjonctif_pressed() -> void:
	get_tree().change_scene_to_file("res://pages/menu_principal/NotionsImportantes/Conjugaison/Subjonctif/PlusQueParfait.tscn");


func _on_bt_futur_subjonctif_5_pressed() -> void:
	get_tree().change_scene_to_file("res://pages/menu_principal/NotionsImportantes/Conjugaison/Subjonctif/Futur.tscn");


func _on_bt_futur_anterieur_subjonctif_pressed() -> void:
	get_tree().change_scene_to_file("res://pages/menu_principal/NotionsImportantes/Conjugaison/Subjonctif/FuturAntérieur.tscn");


func _on_bt_present_impératif_pressed() -> void:
	get_tree().change_scene_to_file("res://pages/menu_principal/NotionsImportantes/Conjugaison/Imperatif/Imperatif.tscn");


func _on_bt_infinitif_pressed() -> void:
	get_tree().change_scene_to_file("res://pages/menu_principal/NotionsImportantes/Conjugaison/Formes/Infinitif.tscn");


func _on_bt_gérondif_pressed() -> void:
	get_tree().change_scene_to_file("res://pages/menu_principal/NotionsImportantes/Conjugaison/Formes/Gerondif.tscn");


func _on_bt_participe_present_pressed() -> void:
	get_tree().change_scene_to_file("res://pages/menu_principal/NotionsImportantes/Conjugaison/Formes/ParticipePresent.tscn");


func _on_bt_participe_passe_pressed() -> void:
	get_tree().change_scene_to_file("res://pages/menu_principal/NotionsImportantes/Conjugaison/Formes/ParticipePasse.tscn");
